# DSPy-facility-support-example

./: .env.example  .gitignore  CONCEPTUAL_FRAMEWORK.md  ENGINEERING_GUIDE.md  FINDINGS.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
00_data_exploration/: README.md  explore.py
01_handwritten_rules/: README.md  classify.py  rules.py
02_fasttext/: README.md  classify.py  prepare_data.py  train.py
02_fasttext/data/: categories_test.txt  categories_train.txt  sentiment_test.txt  sentiment_train.txt  urgency_test.txt  urgency_train.txt
03_classical_ml/: README.md  feature_analysis.py  train_eval.py
04_spacy/: README.md  entity_augmented.py  entity_rules.py  train_textcat.py
05_cobweb_dm/: README.md  classify.py  cobweb_keywords.py  cobweb_text.py
06_llm/: README.md  compare_base.py  gepa_optimise.py  thinking_ablation.py
07_evaluation/: README.md  benchmark_latency.py  compare_all.py  failure_analysis.py  plot_tradeoffs.py
data/results/: 00_data_exploration.json  01_handwritten_rules.json  02_fasttext.json  03_classical_ml_logreg.json  03_classical_ml_nb.json  03_classical_ml_svm.json  04_spacy_entity_augmented.json  04_spacy_textcat.json  05_cobweb.json  05_cobweb_keywords.json  05_cobweb_text.json  06_llm_parent_base.json  06_llm_student_base.json  06_llm_student_compiled.json
shared/: __init__.py  dataset.py  metrics.py
